force-app/main/default/objects/Plan__c/Plan__c.object-meta.xml
<CustomObject>
    <description>Represents Territory and Overlay plan created by Inside Sales and Channel Partner users</description>
    <label>Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>