force-app/main/default/objects/Plan__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Channel Partner (lookup) is automatically populated based on CP users account assignment and cannot be edited by Channel Partner user</description>
    <inlineHelpText>Channel Partner (lookup) is automatically populated based on CP users account assignment and cannot be edited by Channel Partner user</inlineHelpText>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <type>Lookup</type>
</CustomField>