force-app/main/default/objects/Plan__c/fields/Channel_Partner_Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Territory_Code__c</fullName>
    <description>Holds territory code on channel partner and is used to share the plan records with respective channel partner account user.</description>
    <inlineHelpText>Holds territory code on channel partner and is used to share the plan records with respective channel partner account user.</inlineHelpText>
    <label>Channel Partner Territory Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>