force-app/main/default/objects/Plan__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>End Date indicates when the planned execution of the Territory plan will be completed and is defaulted to the last day of the selected calendar year.</description>
    <inlineHelpText>End Date indicates when the planned execution of the Territory plan will be completed and is defaulted to the last day of the selected calendar year.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>