force-app/main/default/objects/Plan__c/fields/Est_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Est_Run_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Holds Estimated Run Rate in ($) on Gap to Territory Plan as to pass this to Tableau dashboard as input parameter</description>
    <inlineHelpText>Use this field to update the Gap to Plan graph with your best estimate into expected run rate for this period.</inlineHelpText>
    <label>Est Run Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>