force-app/main/default/objects/Plan__c/fields/Gap_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Gap_Analysis__c</fullName>
    <description>Represent the Gap Analysis that user can use to add notes with respective to the territory and plan</description>
    <inlineHelpText>Represent the Gap Analysis that user can use to add notes with respective to the territory and plan</inlineHelpText>
    <label>Gap Analysis</label>
    <length>500</length>
    <type>Html</type>
</CustomField>