force-app/main/default/objects/Plan__c/fields/Growth_Overview_CP__c.field-meta.xml
<CustomField>
    <fullName>Growth_Overview_CP__c</fullName>
    <description>Links to Tableau Dashboards filtered for your Territory. The Growth Overview dashboard helps users understand what factors within their territory coverage are driving overall growth. It includes insights around platforms, market segments, and specific customers.</description>
    <formula>HYPERLINK(&quot;https://tableau.illumina.com/#/site/Commercial/views/GrowthOverview_15916388819410/GrowthOverview?Channel%20Partner%20Code=&quot;&amp; Channel_Partner_Territory_Code__c , &quot;Growth Overview&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tableau Dashboards filtered for your Territory. The Growth Overview dashboard helps users understand what factors within their territory coverage are driving overall growth. It includes insights around platforms, market segments, and specific customers.</inlineHelpText>
    <label>Growth Overview</label>
    <type>Text</type>
</CustomField>