force-app/main/default/objects/Plan__c/fields/Illumina_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Illumina_Strategy__c</fullName>
    <description>Field that holds details of Illumina Strategy</description>
    <label>Illumina Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>