force-app/main/default/objects/Plan__c/fields/Is_file_attached__c.field-meta.xml
<CustomField>
    <fullName>Is_file_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to validate if a file is attached to  plan record</description>
    <label>Is file attached?</label>
    <type>Checkbox</type>
</CustomField>