force-app/main/default/objects/Plan__c/fields/No_of_Objectives__c.field-meta.xml
<CustomField>
    <fullName>No_of_Objectives__c</fullName>
    <description>Holds roll up summary of number of Objectives on a Plan</description>
    <inlineHelpText>Holds roll up summary of number of Objectives on a Plan</inlineHelpText>
    <label># of Objectives</label>
    <summarizedField>Plan_Strategy__c.No_of_Objectives__c</summarizedField>
    <summaryFilterItems>
        <field>Plan_Strategy__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Plan_Strategy__c.Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>