force-app/main/default/objects/Plan__c/fields/NovaSeq_System__c.field-meta.xml
<CustomField>
    <fullName>NovaSeq_System__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Product type Gap filling ($) field used on Gap to Territory Plan as to pass this to Tableau dashboard as input parameter</description>
    <inlineHelpText>Product type Gap filling ($) field used on Gap to Territory Plan as to pass this to Tableau dashboard as input parameter</inlineHelpText>
    <label>NovaSeq System</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>