force-app/main/default/objects/Plan__c/fields/Percent_Action_Completed__c.field-meta.xml
<CustomField>
    <fullName>Percent_Action_Completed__c</fullName>
    <description>Percentage of number of Actions completed on a Plan</description>
    <formula>IF( No_of_Completed_Actions__c  = 0 , 0 ,  No_of_Completed_Actions__c  /  No_of_Actions__c )</formula>
    <inlineHelpText>Percentage of number of Actions completed on a Plan</inlineHelpText>
    <label>% Action Completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>