force-app/main/default/objects/Plan__c/fields/Pipeline_Health__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Health__c</fullName>
    <description>Links to Tableau Dashboards filtered for your Territory. The Pipeline Health dashboard allows users to monitor the health of opportunities and gives a comprehensive view of pipeline strength, with indicators to highlight whether or not current pipeline coverage is sufficient.</description>
    <formula>HYPERLINK(&quot;https://tableau.illumina.com/#/site/Commercial/views/CommercialDashboardPipelineHealth/PipelineHealthOutlook?Territory+Code=&quot;&amp; Territory_Code__c , &quot;Pipeline Health&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tableau Dashboards filtered for your Territory. The Pipeline Health dashboard allows users to monitor the health of opportunities and gives a comprehensive view of pipeline strength, with indicators to highlight whether or not current pipeline coverage is</inlineHelpText>
    <label>Pipeline Health</label>
    <type>Text</type>
</CustomField>