force-app/main/default/objects/Plan__c/fields/Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Plan Name indicates the name of the Territory Plan and is defined by the sales user (e.g., 2020 Great Lakes Territory Plan)</description>
    <inlineHelpText>Plan Name indicates the name of the Territory Plan and is defined by the sales user (e.g., 2020 Great Lakes Territory Plan)</inlineHelpText>
    <label>Plan Name</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Plans</relationshipLabel>
    <relationshipName>Plans</relationshipName>
    <type>Lookup</type>
</CustomField>