force-app/main/default/objects/Plan__c/fields/Plan_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Plan_Owner_Name__c</fullName>
    <description>Represents Name of the owner on the plan</description>
    <formula>Owner:User.FirstName+&apos; &apos;+Owner:User.LastName</formula>
    <inlineHelpText>Represents Name of the owner on the plan</inlineHelpText>
    <label>Plan Owner Name</label>
    <type>Text</type>
</CustomField>