force-app/main/default/objects/Plan__c/fields/Software_Informatics__c.field-meta.xml
<CustomField>
    <fullName>Software_Informatics__c</fullName>
    <description>Software informatics fields</description>
    <defaultValue>0</defaultValue>
    <label>Software &amp; Informatics</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>