force-app/main/default/objects/Plan__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Start Date indicates when the execution of a Territory Plan begins and is defaulted to the first day of the selected calendar year.</description>
    <inlineHelpText>Start Date indicates when the execution of a Territory Plan begins and is defaulted to the first day of the selected calendar year.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>