force-app/main/default/objects/Plan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The Plan Status indicates the current status of the Territory plan. The status can be defined as Draft, Active, or Closed.</description>
    <inlineHelpText>The Plan Status indicates the current status of the Territory plan. The status can be defined as Draft, Active, or Closed. Draft means the plan is in work, and not yet being acted upon(Active). Closed means the plan has been replaced or completed.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>