force-app/main/default/objects/Plan__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <description>Strengths are internal factors that enable competitive advantage (e.g., strong brand, new products, etc.)</description>
    <inlineHelpText>Strengths are internal factors that enable competitive advantage (e.g., strong brand, new products, etc.) They are things over which you have some control, and can change.</inlineHelpText>
    <label>Strengths</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>