force-app/main/default/objects/Plan__c/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <description>Territory code of the user in ETM hierarchy, who created the Plan is auto populated at the time of plan creation</description>
    <inlineHelpText>Territory code of the user in ETM hierarchy, who created the Plan is auto populated at the time of plan creation</inlineHelpText>
    <label>Territory Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>