force-app/main/default/objects/Plan__c/fields/Territory_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory_Id__c</fullName>
    <description>Territory ID of the user in ETM hierarchy, who created the Plan is auto populated at the time of plan creation</description>
    <inlineHelpText>Territory ID of the user in ETM hierarchy, who created the Plan is auto populated at the time of plan creation</inlineHelpText>
    <label>Territory Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>