force-app/main/default/objects/Plan__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <description>Autopopulated with User Territory when user is assigned to a single territory. Else User is populated with list of territories to select from as Territory Name</description>
    <inlineHelpText>Autopopulated with User Territory when user is assigned to a single territory. Else User is populated with list of territories to select from as Territory Name</inlineHelpText>
    <label>Territory Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>