force-app/main/default/objects/Plan__c/fields/Territory_Region__c.field-meta.xml
<CustomField>
    <fullName>Territory_Region__c</fullName>
    <description>Holds territory region of the plan territory and is used in opening the sharing of plan records</description>
    <inlineHelpText>Holds territory region of the plan territory and is used in opening the sharing of plan records</inlineHelpText>
    <label>Territory Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>