force-app/main/default/objects/Plan__c/recordTypes/Channel_Partner_Territory_Plan.recordType-meta.xml
<RecordType>
    <fullName>Channel_Partner_Territory_Plan</fullName>
    <active>true</active>
    <description>Select this record type to create a plan for a specific channel partner territory</description>
    <label>Channel Partner Territory Plan</label>
</RecordType>