force-app/main/default/objects/Plan__c/recordTypes/Overlay_Plan.recordType-meta.xml
<RecordType>
    <fullName>Overlay_Plan</fullName>
    <active>true</active>
    <description>Overlay Plan for Sales Specialists, Inside Sales, Sales Leaders, etc.</description>
    <label>Overlay Plan</label>
</RecordType>