force-app/main/default/objects/Plan__c/recordTypes/Sales_Territory_Plan.recordType-meta.xml
<RecordType>
    <fullName>Sales_Territory_Plan</fullName>
    <active>true</active>
    <description>Select this record type to create a plan for a specific sales territory</description>
    <label>Sales Territory Plan</label>
</RecordType>