force-app/main/default/objects/Plan__c/validationRules/CheckOwnerChangeForOverlay.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckOwnerChangeForOverlay</fullName>
    <active>true</active>
    <description>Restrict user to change owner once Overlay Plan is created.</description>
    <errorConditionFormula>AND(
    NOT(
       OR(
         $User.FirstName ==$Label.Automated_Process_User,
         $Profile.Name = $Label.ProfileSystemAdmin
         )
       ),
    NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
    ISCHANGED(OwnerId),
    RecordType.DeveloperName =  $Label.PlanOverlay
    )</errorConditionFormula>
    <errorDisplayField>OwnerId</errorDisplayField>
    <errorMessage>Ownership change is not allowed for Overlay Plans.</errorMessage>
</ValidationRule>