force-app/main/default/objects/Plan__c/listViews/All_Active_Sales_Territory_Plans.listView-meta.xml
<ListView>
    <fullName>All_Active_Sales_Territory_Plans</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Plan_Owner_Name__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>Plan_Target__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Plan__c.Sales_Territory_Plan</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Sales Territory Plans</label>
</ListView>