force-app/main/default/objects/Plan__c/listViews/All_Draft_Plans.listView-meta.xml
<ListView>
    <fullName>All_Draft_Plans</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Plan_Owner_Name__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>Plan_Target__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Plan__c.Overlay_Plan</value>
    </filters>
    <label>All Draft Plans</label>
</ListView>