force-app/main/default/objects/Plan__c/listViews/My_Plans.listView-meta.xml
<ListView>
    <fullName>My_Plans</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Plan_Owner_Name__c</columns>
    <columns>Territory_Name__c</columns>
    <columns>Plan_Target__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <label>My Plans</label>
</ListView>